--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  app:
+    container_name: docker-prisma-graphql
+    restart: always
+    build: .
+    ports:
+      - '4000:4000'
+    links:
+      - prisma
   prisma:
     image: prismagraphql/prisma:1.14
     restart: always
