redis is kinda working

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "bluebird": "^3.5.1",
     "graphql-yoga": "1.14.10",
     "jsonwebtoken": "8.3.0",
-    "prisma-binding": "2.1.0"
+    "prisma-binding": "2.1.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "dotenv": "6.0.0",
