--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "bluebird": "^3.5.1",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-yoga": "1.14.10",
     "jsonwebtoken": "8.3.0",
     "prisma-binding": "2.1.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "subscriptions-transport-ws": "^0.9.14"
   },
   "devDependencies": {
     "dotenv": "6.0.0",
