--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "bluebird": "^3.5.1",
+    "graphql-redis-subscriptions": "^1.5.0",
     "graphql-subscriptions": "^0.5.8",
     "graphql-yoga": "1.14.10",
     "jsonwebtoken": "8.3.0",
